# dev-note

./: 404.html  Gemfile  LICENSE  README.md  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  deploy-site-to-gh-pages.yml
.github/workflows/: deploy-site-to-gh-pages.yml
_data/: content.yml
_layouts/: default.html
_posts/: 2020-12-20-welcome-to-jekyll.markdown
agile_methods/: index.html  invest.html
agile_methods/invest/: index.html
agile_methods/metrics-flow/: index.html
agile_methods/scrum/: index.html
architecture/: index.html
architecture/entity_component_system/: index.html
architecture/event_driven/: index.html
concepts/: big_data.html  index.html
concepts/big_data/: index.html
concepts/clean_code/: index.html
concepts/domain_driven_design/: entities.html  index.html
concepts/event_driven_architecture/: index.html
design_pattern/: index.html
design_pattern/behavioral/: index.html  observer.html  visitor.html
docs/: .pages  index.md
docs/agile_methods/: .pages  index.md  invest.md  metrics-flow.md  scrum.md
docs/architecture/: index.md
docs/concepts/: big_data.md  index.md
frameworks_and_tools/: index.html  peotry.html
infrastructure/: index.html
machine_learning/: activation_functions.html  data_preprocessing.html  feature_scaling.html  index.html  loss_functions.html
microservices/: index.html  service_interaction.html
programming_languages/: c.html  index.html  peotry.html
search/: search_index.json
testing/: index.html
tooling/: index.html
(+57 files in other folders)
