[tool.poetry]
name = "dev-note"
version = "0.1.0"
description = ""
authors = ["thomaszub"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2"
mkdocs-section-index = "^0.3"
mkdocs-awesome-pages-plugin = "^2.6"
mkdocs-material = "^7.3"
mkdocs-mermaid2-plugin = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
